main
====
Tables, support for "text indexes":
    - classes `TableTextIndexDefinition` and `TableTextIndexOptions` (e.g. for `list_indexes()` method)
    - tables got a `.create_text_index()` method
Tables, introduced method `list_indexes()`
Cursors (all types): introduced the "pagination API":
    - `.fetch_next_page()` method
    - `initial_page_state` cursor constructor parameter / builder interface method
Admin, renamed 'region_name' ==> `name` in `AstraDBAdminDatabaseRegionInfo` and `AstraDBAvailableRegionInfo` (the old name kept as a deprecated alias)
Introduced the notion of 'passthrough columns' to cover all of the cql-only partially/completely unsupported columns in the read/schema-read path
Fix: methods `drop_[collection|table]` of `[Async]Database`, and their Collection/Table sugar methods, now consistently return None.
AstraDBAdmin: introduced `[async_]find_available_regions()` method (and related response objects)
embedding/reranking models' "API support status":
    - db admins' `.find_[embedding|reranking]_providers()` methods have a `filter_model_status` parameter;
    - returned `*Model` objects have an appropriate "API Support" attribute.
allow sending `"$vector": None` when inserting into collections
support for modelSupport in findRerankingProviders
CollectionDefinition fluent interface: set_lexical and set_rerank accept also just 'enabled'
find_and_rerank scores' type enlarged to: `float|int|null`
maintenance: subsumed the specific testing opt-in env. var 'ASTRAPY_TEST_MAP2TUPLES=y' into the catch-all 'cutting-edge main' `ASTRAPY_TEST_LATEST_MAIN=y`
maintenance: switched to uv (from poetry)
maintenance: promoted findAndRerank testing to the 'regular' IT (adjusted readme and env templates accordingly)
maintenance: pin h11 to 0.16.0 or higher (after a vulnerability report)
maintenance: switch to latest HCD for non-Astra CI github action