@@ -30,6 +30,7 @@ from astrapy.constants import (
     DefaultRowType,
     Environment,
 )
+from astrapy.data.info.table_descriptor.type_altering import AlterTypeOperation
 from astrapy.exceptions import (
     DevOpsAPIException,
     InvalidEnvironmentException,
@@ -1737,6 +1738,132 @@ class Database:
             )
         logger.info(f"finished createType('{name}')")
 
+    def alter_type(
+        self,
+        name: str,
+        operations: list[AlterTypeOperation],
+        *,
+        keyspace: str | None = None,
+        table_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> None:
+        """
+        Apply one or more changes to a user-defined type (UDT), e.g. adding fields.
+
+        The UDT must be already present on the database, in the targeted keyspace.
+        If not specified, the keyspace is the database's working keyspace.
+
+        The input of this method is a list of operations, each expressing a change
+        to the user-defined type: those will be re-expressed as a single operation
+        and sent to the Data API as a single command invocation.
+
+        Args:
+            name: the name of the user-defined type to modify. The type must be
+                found on the database, in the keyspace targeted by this call.
+            operations: a list of zero, one or several `astrapy.info.AlterTypeOperation`
+                objects representing the desired changes to apply to the UDT. These can
+                be of heterogeneous type (for example, some field being renamed and
+                other new fields being added). In case a field is referenced multiple
+                times across the operations, the last directive will be kept.
+            keyspace: the keyspace where the type scoped.
+                If not specified, the general setting for this database is used.
+            table_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying API request. If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `table_admin_timeout_ms`.
+            timeout_ms: an alias for `table_admin_timeout_ms`.
+
+        Examples:
+            >>> from astrapy.info import AlterTypeAddFields, AlterTypeRenameFields
+            >>> from astrapy.info import ColumnType, TableScalarColumnTypeDescriptor
+            >>>
+            >>> # add two fields to the type:
+            >>> database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeAddFields(fields={
+            ...             "observations": TableScalarColumnTypeDescriptor(
+            ...                 ColumnType.INT,
+            ...             ),
+            ...             "family": TableScalarColumnTypeDescriptor(
+            ...                 ColumnType.TEXT,
+            ...             ),
+            ...         }),
+            ...     ],
+            ... )
+            >>> # rename an existing field in the type:
+            >>> database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeRenameFields(fields={"family": "species_family"}),
+            ...     ],
+            ... )
+            >>> # combine various operations into one invocation:
+            >>> database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeAddFields(
+            ...             fields={
+            ...                 "common_name": TableScalarColumnTypeDescriptor(
+            ...                     ColumnType.TEXT,
+            ...                 ),
+            ...             },
+            ...         ),
+            ...         AlterTypeRenameFields(
+            ...             fields={"observations": "num_observations"},
+            ...         ),
+            ...         AlterTypeAddFields(
+            ...             fields={
+            ...                 "phylum": TableScalarColumnTypeDescriptor(
+            ...                     ColumnType.TEXT,
+            ...                 ),
+            ...             },
+            ...         ),
+            ...     ],
+            ... )
+        """
+
+        _table_admin_timeout_ms, _ta_label = _select_singlereq_timeout_ta(
+            timeout_options=self.api_options.timeout_options,
+            table_admin_timeout_ms=table_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        driver_commander = self._get_driver_commander(keyspace=keyspace)
+
+        grouped_ops: dict[str, list[AlterTypeOperation]] = {}
+        for op in operations:
+            grouped_ops[op._name] = grouped_ops.get(op._name, []) + [op]
+
+        stacked_op_map: dict[str, AlterTypeOperation] = {
+            op_name: op_list[0].stack(op_list)
+            for op_name, op_list in grouped_ops.items()
+        }
+        stacked_op_dict = {
+            op_name: op.as_dict() for op_name, op in stacked_op_map.items()
+        }
+        aty_payload = {
+            "alterType": {
+                "name": name,
+                **stacked_op_dict,
+            }
+        }
+        logger.info(f"alterType('{name}')")
+        aty_response = driver_commander.request(
+            payload=aty_payload,
+            timeout_context=_TimeoutContext(
+                request_ms=_table_admin_timeout_ms, label=_ta_label
+            ),
+        )
+        if aty_response.get("status") != {"ok": 1}:
+            raise UnexpectedDataAPIResponseException(
+                text="Faulty response from alterType API command.",
+                raw_response=aty_response,
+            )
+        logger.info(f"finished alterType('{name}')")
+
     def drop_type(
         self,
         name: str,
@@ -1769,9 +1896,9 @@ class Database:
             timeout_ms: an alias for `table_admin_timeout_ms`.
 
         Example:
-            >>> database.drop_type("sciname")
+            >>> database.drop_type("sci_name")
             >>> # not erroring because of if_exists:
-            >>> database.drop_type("sciname", if_exists=True)
+            >>> database.drop_type("sci_name", if_exists=True)
         """
 
         _table_admin_timeout_ms, _ta_label = _select_singlereq_timeout_ta(
@@ -3610,6 +3737,298 @@ class AsyncDatabase:
         else:
             logger.info("finished listTables")
             return lt_response["status"]["tables"]  # type: ignore[no-any-return]
+
+    async def create_type(
+        self,
+        name: str,
+        *,
+        definition: CreateTypeDefinition | dict[str, Any],
+        keyspace: str | None = None,
+        if_not_exists: bool | None = None,
+        table_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> None:
+        """
+        Creates a user-defined type (UDT) on the database.
+
+        A user-defined type is scoped to a keyspace: unless otherwise specified,
+        the UDT creation targets the database's working keyspace.
+
+        Args:
+            name: the name of the type to create. This will be subsequently used
+                e.g. for defining UDT-valued columns when creating a table.
+            definition: a complete type definition. This can be an
+                instance of `CreateTypeDefinition` or an equivalent (nested) dictionary,
+                in which case it will be parsed into a `CreateTypeDefinition`.
+                See the `astrapy.info.CreateTypeDefinition` class for more details.
+            keyspace: the keyspace where the type is to be created.
+                If not specified, the general setting for this database is used.
+            if_not_exists: if set to True, the command will succeed even if a type
+                with the specified name already exists (in which case no actual
+                creation takes place on the database). Defaults to False,
+                i.e. an error is raised by the API in case of type-name collision.
+            table_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying API request. If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `table_admin_timeout_ms`.
+            timeout_ms: an alias for `table_admin_timeout_ms`.
+
+        Example:
+            >>> # NOTE: may require slight adaptation to an async context.
+            >>>
+            >>> from astrapy.info import CreateTypeDefinition
+            >>> type_definition = CreateTypeDefinition.coerce(
+            ...     {"fields": {"genus": "text", "species": "text"}}
+            ... )
+            >>> await async_database.create_type("sci_name", definition=type_definition)
+        """
+        cty_options: dict[str, bool]
+        if if_not_exists is not None:
+            cty_options = {"ifNotExists": if_not_exists}
+        else:
+            cty_options = {}
+        cty_definition: dict[str, Any] = CreateTypeDefinition.coerce(
+            definition
+        ).as_dict()
+        _table_admin_timeout_ms, _ta_label = _select_singlereq_timeout_ta(
+            timeout_options=self.api_options.timeout_options,
+            table_admin_timeout_ms=table_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        driver_commander = self._get_driver_commander(keyspace=keyspace)
+        cty_payload = {
+            "createType": {
+                k: v
+                for k, v in {
+                    "name": name,
+                    "definition": cty_definition,
+                    "options": cty_options,
+                }.items()
+                if v is not None
+                if v != {}
+            }
+        }
+        logger.info(f"createType('{name}')")
+        cty_response = await driver_commander.async_request(
+            payload=cty_payload,
+            timeout_context=_TimeoutContext(
+                request_ms=_table_admin_timeout_ms, label=_ta_label
+            ),
+        )
+        if cty_response.get("status") != {"ok": 1}:
+            raise UnexpectedDataAPIResponseException(
+                text="Faulty response from createType API command.",
+                raw_response=cty_response,
+            )
+        logger.info(f"finished createType('{name}')")
+
+    async def alter_type(
+        self,
+        name: str,
+        operations: list[AlterTypeOperation],
+        *,
+        keyspace: str | None = None,
+        table_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> None:
+        """
+        Apply one or more changes to a user-defined type (UDT), e.g. adding fields.
+
+        The UDT must be already present on the database, in the targeted keyspace.
+        If not specified, the keyspace is the database's working keyspace.
+
+        The input of this method is a list of operations, each expressing a change
+        to the user-defined type: those will be re-expressed as a single operation
+        and sent to the Data API as a single command invocation.
+
+        Args:
+            name: the name of the user-defined type to modify. The type must be
+                found on the database, in the keyspace targeted by this call.
+            operations: a list of zero, one or several `astrapy.info.AlterTypeOperation`
+                objects representing the desired changes to apply to the UDT. These can
+                be of heterogeneous type (for example, some field being renamed and
+                other new fields being added). In case a field is referenced multiple
+                times across the operations, the last directive will be kept.
+            keyspace: the keyspace where the type scoped.
+                If not specified, the general setting for this database is used.
+            table_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying API request. If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `table_admin_timeout_ms`.
+            timeout_ms: an alias for `table_admin_timeout_ms`.
+
+        Examples:
+            >>> # NOTE: may require slight adaptation to an async context.
+            >>>
+            >>> from astrapy.info import AlterTypeAddFields, AlterTypeRenameFields
+            >>> from astrapy.info import ColumnType, TableScalarColumnTypeDescriptor
+            >>>
+            >>> # add two fields to the type:
+            >>> await async_database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeAddFields(fields={
+            ...             "observations": TableScalarColumnTypeDescriptor(
+            ...                 ColumnType.INT,
+            ...             ),
+            ...             "family": TableScalarColumnTypeDescriptor(
+            ...                 ColumnType.TEXT,
+            ...             ),
+            ...         }),
+            ...     ],
+            ... )
+            >>> # rename an existing field in the type:
+            >>> await async_database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeRenameFields(fields={"family": "species_family"}),
+            ...     ],
+            ... )
+            >>> # combine various operations into one invocation:
+            >>> await async_database.alter_type(
+            ...     "sci_name",
+            ...     operations=[
+            ...         AlterTypeAddFields(
+            ...             fields={
+            ...                 "common_name": TableScalarColumnTypeDescriptor(
+            ...                     ColumnType.TEXT,
+            ...                 ),
+            ...             },
+            ...         ),
+            ...         AlterTypeRenameFields(
+            ...             fields={"observations": "num_observations"},
+            ...         ),
+            ...         AlterTypeAddFields(
+            ...             fields={
+            ...                 "phylum": TableScalarColumnTypeDescriptor(
+            ...                     ColumnType.TEXT,
+            ...                 ),
+            ...             },
+            ...         ),
+            ...     ],
+            ... )
+        """
+
+        _table_admin_timeout_ms, _ta_label = _select_singlereq_timeout_ta(
+            timeout_options=self.api_options.timeout_options,
+            table_admin_timeout_ms=table_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        driver_commander = self._get_driver_commander(keyspace=keyspace)
+
+        grouped_ops: dict[str, list[AlterTypeOperation]] = {}
+        for op in operations:
+            grouped_ops[op._name] = grouped_ops.get(op._name, []) + [op]
+
+        stacked_op_map: dict[str, AlterTypeOperation] = {
+            op_name: op_list[0].stack(op_list)
+            for op_name, op_list in grouped_ops.items()
+        }
+        stacked_op_dict = {
+            op_name: op.as_dict() for op_name, op in stacked_op_map.items()
+        }
+        aty_payload = {
+            "alterType": {
+                "name": name,
+                **stacked_op_dict,
+            }
+        }
+        logger.info(f"alterType('{name}')")
+        aty_response = await driver_commander.async_request(
+            payload=aty_payload,
+            timeout_context=_TimeoutContext(
+                request_ms=_table_admin_timeout_ms, label=_ta_label
+            ),
+        )
+        if aty_response.get("status") != {"ok": 1}:
+            raise UnexpectedDataAPIResponseException(
+                text="Faulty response from alterType API command.",
+                raw_response=aty_response,
+            )
+        logger.info(f"finished alterType('{name}')")
+
+    async def drop_type(
+        self,
+        name: str,
+        *,
+        keyspace: str | None = None,
+        if_exists: bool | None = None,
+        table_admin_timeout_ms: int | None = None,
+        request_timeout_ms: int | None = None,
+        timeout_ms: int | None = None,
+    ) -> None:
+        """
+        Drop a user-defined type (UDT) from the database
+
+        User-defined types are scoped to a keyspace: the drop operation always
+        targets a specific keyspace, which if not explicitly provided is the
+        database's working keyspace.
+
+        Args:
+            name: the name of the UDT to drop.
+            keyspace: the keyspace where the type resides. If not specified,
+                the database working keyspace is assumed.
+            if_exists: if passed as True, trying to drop a non-existing type
+                will not error, just silently do nothing instead. If not provided,
+                the API default behaviour will hold.
+            table_admin_timeout_ms: a timeout, in milliseconds, to impose on the
+                underlying API request. If not provided, this object's defaults apply.
+                (This method issues a single API request, hence all timeout parameters
+                are treated the same.)
+            request_timeout_ms: an alias for `table_admin_timeout_ms`.
+            timeout_ms: an alias for `table_admin_timeout_ms`.
+
+        Example:
+            >>> # NOTE: may require slight adaptation to an async context.
+            >>>
+            >>> await async_database.drop_type("sci_name")
+            >>> # not erroring because of if_exists:
+            >>> await async_database.drop_type("sci_name", if_exists=True)
+        """
+
+        _table_admin_timeout_ms, _ta_label = _select_singlereq_timeout_ta(
+            timeout_options=self.api_options.timeout_options,
+            table_admin_timeout_ms=table_admin_timeout_ms,
+            request_timeout_ms=request_timeout_ms,
+            timeout_ms=timeout_ms,
+        )
+        _keyspace = keyspace or self.keyspace
+        dty_options: dict[str, bool]
+        if if_exists is not None:
+            dty_options = {"ifExists": if_exists}
+        else:
+            dty_options = {}
+        driver_commander = self._get_driver_commander(keyspace=_keyspace)
+        dty_payload = {
+            "dropType": {
+                k: v
+                for k, v in {
+                    "name": name,
+                    "options": dty_options,
+                }.items()
+                if v is not None
+                if v != {}
+            }
+        }
+        logger.info(f"dropType('{name}')")
+        dty_response = await driver_commander.async_request(
+            payload=dty_payload,
+            timeout_context=_TimeoutContext(
+                request_ms=_table_admin_timeout_ms, label=_ta_label
+            ),
+        )
+        if dty_response.get("status") != {"ok": 1}:
+            raise UnexpectedDataAPIResponseException(
+                text="Faulty response from dropType API command.",
+                raw_response=dty_response,
+            )
+        logger.info(f"finished dropType('{name}')")
 
     async def command(
         self,
