@@ -1,5 +1,8 @@
 main
 ====
+User-defined types in tables:
+    - type management: `CreateTypeDefinition`, `AlterTypeOperation`, `AlterTypeAddFields` and `AlterTypeRenameFields` classes
+    - type management: Database's `create_type`, `alter_type` and `drop_type` methods
 Tables, support for "text indexes":
     - classes `TableTextIndexDefinition` and `TableTextIndexOptions` (e.g. for `list_indexes()` method)
     - tables got a `.create_text_index()` method
